PrincessModel: simplify some code by using Multimap instead of Map with Lists.
Additionally, returning Null can be avoided, see Checkstyle warnings.